# litmus-operators

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: _charm-release.yaml  _terraform-tests-auto.yaml  charm-pull-request.yaml  charm-release.yaml  debug-integration.yaml  integration-tests.yaml  lib-pull-request.yaml  lib-release.yaml  promote.yaml  pull-request.yaml  quality-gates.yaml  release.yaml  temp-charm-release.yaml  terraform-tests.yaml  tiobe-scan.yaml  update-libs.yaml
.logs/: test-smoke-dc856681-jdl.txt
auth/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
auth/src/: charm.py  litmus_auth.py  tls.py
auth/terraform/: README.md  main.tf  outputs.tf  variables.tf
auth/tests/integration/: conftest.py  helpers.py  test_charm.py  test_smoke.py  test_tls.py
auth/tests/interface/: conftest.py
auth/tests/unit/: certificates_helpers.py  conftest.py  test_database_integration.py  (+7 more)
backend/: README.md  charmcraft.yaml  pyproject.toml
backend/src/: charm.py  litmus_backend.py  tls.py
backend/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
chaoscenter/: .gitignore  README.md  charmcraft.yaml  pyproject.toml  tox.ini
chaoscenter/src/: chaoscenter.py  charm.py  database_model.py  environment_manager.py  infra_manager.py  kube_config.py  kubeconfig.py  litmus_client.py  litmus_frontend.py  litmusctl.py  nginx_config.py  tls.py  traefik_config.py  user_manager.py
chaoscenter/terraform/: README.md  main.tf  outputs.tf  terraform.tf  variables.tf  versions.tf
docs/adrs/: 2026-03-16--litmus-resource-management.md
infrastructure/: README.md  charmcraft.yaml  pyproject.toml  tox.ini
infrastructure/src/: charm.py
infrastructure/terraform/: README.md  main.tf  outputs.tf  terraform.tf  variables.tf  versions.tf
libs/: README.md  pyproject.toml  tox.ini
scripts/: dev_deploy.sh  libs_from_local.sh  libs_from_pypi.sh  repack.sh  update_libs.sh
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
tests/integration/: conftest.py  helpers.py  test_backend_auth_integration.py  test_chaoscenter_metrics_integration.py  test_ingress.py  test_ingress_with_ssl.py  test_litmus_control_plan_self_monitoring.py  test_litmus_control_plane.py  test_litmus_control_plane_self_monitoring.py  test_litmus_control_plane_with_ssl.py  test_litmus_environment.py  test_litmus_infrastructure.py  test_mesh.py  test_nginx.py  test_self_monitoring_integrations.py  test_smoke.py  test_ssl_integration.py
tests/terraform/: main.tf  test_terraform_module.py  variables.tf
tests/unit/: test_libs_consistency.py  test_smoke_integrations.py
(+86 files in other folders)
