# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.
[project]
name = "litmus-k8s"
version = "0.1"  # this is in fact irrelevant
requires-python = ">=3.12, <4"


[dependency-groups]
dev = [
    #INTEGRATION TESTS
    "jubilant",
    "pytest-jubilant~=1.0",
    "tenacity"
]


[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = ["setup", "teardown"]
